syntax = "proto3";

package products.v1;

option cc_enable_arenas = true;
option go_package = "github.com/ahmad-khatib0-org/megacommerce-proto/gen/go/products/v1;v1";
option java_outer_classname = "ProductCategoriesProto";
option java_package = "org.megacommerce.products.v1";

message ProductCategory {
  string id = 1;
  string name = 2;
  repeated ProductSubcategory subcategories = 3;
}

message ProductSubcategory {
  string id = 1;
  string name = 2;
  map<string, ProductSubcategoryAttribute> attributes = 3;
}

message ProductSubcategoryAttribute {
  bool required = 1;
  string type = 2;
  repeated string string_array = 3;
  ProductAttributeValidation validation = 4;
}

message ProductAttributeValidation {
  ProductAttributeValidationType type = 1;
  string value = 2; // can be integer, float, string ...
}

enum ProductAttributeValidationType {
  PRODUCT_ATTRIBUTE_VALIDATION_TYPE_NUMERIC = 0;
  PRODUCT_ATTRIBUTE_VALIDATION_TYPE_STRING = 1;
}

message ProductAttributeValidationNumeric {
  ProductAttributeNumericValidationRule rule = 1;
}

enum ProductAttributeNumericValidationRule {
  PRODUCT_ATTRIBUTE_NUMERIC_VALIDATION_RULE_MIN = 0;
  PRODUCT_ATTRIBUTE_NUMERIC_VALIDATION_RULE_MAX = 1;
  PRODUCT_ATTRIBUTE_NUMERIC_VALIDATION_RULE_BIGGER_THAN = 2;
  PRODUCT_ATTRIBUTE_NUMERIC_VALIDATION_RULE_LESS_THAN = 3;
}

message ProductAttributeValidationString {
  ProductAttributeNumericValidationRule rule = 1;
}

enum ProductAttributeStringValidationRule {
  PRODUCT_ATTRIBUTE_STRING_VALIDATION_RULE_MIN = 0;
  PRODUCT_ATTRIBUTE_STRING_VALIDATION_RULE_MAX = 1;
}

// not related to database

message ProductCategories {
  repeated ProductCategory categories = 1;
}

message ProductCategoryWithoutSubcategories {
  string id = 1;
  string name = 2;
}

message ProductCategoriesWithoutSubcategories {
  repeated ProductCategoryWithoutSubcategories categories = 1;
}
